@@ -3,7 +3,6 @@ language: ruby
 bundler_args: --without development system_tests
 before_install: rm Gemfile.lock || true
 rvm:
-  - 1.8.7
   - 1.9.3
   - 2.0.0
   - 2.1.0
@@ -15,6 +14,8 @@ env:
   - PUPPET_VERSION="~> 3.4.0" STRICT_VARIABLES=yes
   - PUPPET_VERSION="~> 3.5.0" STRICT_VARIABLES=yes
   - PUPPET_VERSION="~> 3.6.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.8.4" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.8.4" STRICT_VARIABLES=yes FUTURE_PARSER=yes
   - PUPPET_VERSION="~> 4.4.2" STRICT_VARIABLES=yes
 matrix:
   exclude:
